--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <!-- lOGIN  -->
         <div class="login-form">
             <h2 class="animation" style="--D:1">LOGIN</h2>
-            <form action="" method="POST" onsubmit="loginValidation()">
+            <form action="loginvalidation.php" method="POST" onsubmit="loginValidation()">
                 <div class="input-layer animation" style="--D:2">
                     <input type="text" name="username" id="username" required>
                     <label for="username">USERNAME </label>
