--- a/companyregistration.html
+++ b/companyregistration.html
@@ -32,8 +32,7 @@
         background-color: #000000;
         width: 50%;
         min-width: 400px;
-        max-height:600px;
-        height: 800px;
+        height: 100%;
         padding: 20px;
         margin: 0;
         box-shadow: 10px 0px 10px #0059ff;
