Css for registration entirely changed

--- a/login.html
+++ b/login.html
@@ -312,7 +312,7 @@
             <H2 class="animation" style="--D:0">WELCOME<br> BACK!</H2>
             <div class="changeslide signup animation" style="--D:1">
                 <label class="animation" style="--D:2">New to our platform? </label>
-                <a class="signuplink animation" style="--D:3">Create your account</a>
+                <a class="signuplink animation" style="--D:3" href="registration.html">Create your account</a>
             </div>
         </div>
 
